<resources>
    <string name="app_name">Tma_semestralka</string>

    <string name="login_name">Name</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">Register here.</string>

    <string name="register">Register</string>
    <string name="register_title">Registration</string>
    <string name="register_repeat_password">Repeat password</string>
    <string name="register_gender">Gender M/F</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="googlemapAPI">AIzaSyBjzmKnyrXqqUVPueOrepEI2TA7lask3Yk</string>
    <string name="birthdate">Date of birth</string>

    <string name="edit_profile">Edit profile</string>
    <string name="manage_activities">Manage activities</string>

    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image5">image5</string>
    <string name="image4">image4</string>
    <string name="image3">image3</string>
    <string name="image6">image6</string>

    <string name="activity_manage_checked">Checked</string>
    <string name="activity_manage_started">Started</string>
    <string name="activity_manage_ended">Ended</string>
    <string name="activity_manage_title_checked">Selected activities</string>
    <string name="activity_manage_title_started">Started activities</string>
    <string name="activity_manage_title_ended">Ended activities</string>

    <string name="navigation_drawer_open"> Open navigation drawer</string>
    <string name="navigation_drawer_closed"> Closed navigation drawer</string>


</resources>