<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_manageactivities"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".example.activity.ManageActivities">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarmenu"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/gradient"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_hamburger" />

        <ListView
            android:id="@+id/lw_activity_manage_all_activities"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_activity_manage_title" />

        <TextView
            android:id="@+id/tv_activity_manage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/activity_manage_title_checked"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_activity_manage_radio_group" />

        <RadioGroup
            android:id="@+id/rg_activity_manage_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/iv_add_new_activity"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rb_activity_manage_checked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/activity_manage_checked"
                android:textColor="#454545" />

            <RadioButton
                android:id="@+id/rb_activity_manage_started"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_manage_started"
                android:textColor="#454545" />

            <RadioButton
                android:id="@+id/rb_activity_manage_ended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_manage_ended"
                android:textColor="#454545" />

        </RadioGroup>

        <ImageView
            android:id="@+id/iv_add_new_activity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="92dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.958"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_eadd_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>